# sswsort

./: .gitignore  .gitlab-ci.yml  .shellcheckrc  CHANGELOG  CHANGELOG.md  CITATION.bib  CONTRIBUTORS.md  Cargo.toml  Dockerfile  LICENSE  Migration.md  README.md  SSWSORT  install.sh  out.tsv
.cargo/: config.toml
.github/scripts/: check_versions_changelog.pl
.github/workflows/: ci.yml  docs.yml  release.yml
crates/sswsort/: Cargo.toml
crates/sswsort-cli/: Cargo.toml
crates/sswsort-cli/src/: input.rs  main.rs  write.rs
crates/sswsort-cli/src/app/: mod.rs  write.rs
crates/sswsort/src/: lib.rs
presets/: config.toml  cov-beta.fasta  rsv.config.txt  rsv.fasta  rsv.medians.txt  spike.medians.txt
src/: lib.rs  main.rs
src/app/: grid.rs  write.rs
sswsort_res/: chimera_test.fasta  config.toml  cov.medians.txt  flu-ABCD90P.fasta  flu-v5.fasta  flu-v7.fasta  flu.config.txt  flu.fasta  flu.medians.txt  flu2.fasta  spike-SC2.fasta  spike.config.txt
