[workspace]
members = ["crates/sswsort", "crates/sswsort-cli"]
resolver = "2"

[workspace.package]
version = "2.2.1"
edition = "2024"
authors = ["Samuel S. Shepard", "Samuel Wiley", "David Hufnagel"]
rust-version = "1.96"

[workspace.dependencies]
zoe = { version = "0.0.28", default-features = false, features = [
  "multiversion",
] }

[profile.prod]
inherits = "release"
codegen-units = 1
lto = "fat"
strip = true
