[package]
name = "sswsort-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
rust-version.workspace = true

[[bin]]
name = "sswsort"
path = "src/main.rs"
# See: https://github.com/rust-lang/cargo/issues/6313
doc = false

[dependencies]
zoe = { workspace = true }
sswsort = { path = "../sswsort" }
clap = { version = "4", features = ["derive"] }
rayon = "1"
num_cpus = "1"
jiff = "0.2"
