[package]
name = "sswsort"
version.workspace = true
edition.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
zoe = { workspace = true }
toml = { version = "1", default-features = false, features = [
    "parse",
    "serde",
    "std",
] }
serde = { version = "1", features = ["derive"] }
foldhash = "0.2"

[lints]
workspace = true
